# Wesnoth-AI

./: .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  INTEGRATION_GUIDE.md  MIGRATION_NOTES.md  NEXT_STEPS.md  PROJECT_STATUS.md  README.md  SESSION_COMPLETE.md  STATUS.md  SUMMARY.md  TESTING.md  TROUBLESHOOTING.md  action_sampler.py  action_selector.py  ai_server.py  assumptions.py  batch_manager  classes.py  combat.py  combat_oracle.py  conftest.py  constants.py  dependencies.md  device.py  dummy_policy.py  encoder.py  encodings.py  game_manager.py  improvements.md  local_game_launcher.py  lua_ai_bridge.lua  main.py  misc_references_for_documentation.md  model.py  policy.py  profiling.py  pyproject.toml  (+101 more)
.claude/: settings.json  settings.local.json
Documentation/: ScenarioWML_The+Battle+for+Wesnoth+Wiki-2025021213039.xml  ScenarioWML_from_html.md  WML_documentation_The+Battle+for+Wesnoth+Wiki-20250116142921.xml
WML Documentation/: is_this_documentation.md
benchmarks/: bench_enum.py  bench_mcts_tt.py  bench_sim_throughput.py
cluster/: RUNBOOK.md  build_bundle.ps1  gui.bat  gui.pyw  job.sbatch  job_profile.sbatch  job_selfplay.sbatch  pull_checkpoint.ps1  run.sh  setup.sh  sync.ps1
configs/: action_type_weights.json  draw_tiebreak.json  reward_selfplay.json
docs/: cliffness_calibration.md  design_constants.md  detector_training_signal.md  gpu_perf_patches.md  mcts_vs_reinforce_eval.md  running_on_gpu.md  superhuman_training_plan.md  swap_detector_design.md  tier_a_remeasure_20260720.md  tier_a_runbook.md  wesnoth_rules.md
memory/: MEMORY.md
(+405 files in other folders)
